--- a/receipt.jrxml
+++ b/receipt.jrxml
@@ -53,7 +53,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Carlito" size="8"/>
 				</textElement>
-				<text><![CDATA[P.O. BOX ________________________ MURANG'A]]></text>
+				<text><![CDATA[P.O. BOX 719 - 10200 MURANG'A]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="102" width="210" height="15" uuid="52935167-6ee5-4ec2-bb06-03caf4e5d612">
@@ -69,7 +69,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Carlito" size="9"/>
 				</textElement>
-				<text><![CDATA[TEL: +254***********]]></text>
+				<text><![CDATA[TEL: +254742217187]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="120" width="50" height="12" uuid="a8cf11d4-31e7-4d3e-b47c-64257c8bc18c">
@@ -557,7 +557,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Carlito" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[LIPA NA MPESA (BUY GOODS) XXXXXXXXXXXXXXXX]]></text>
+				<text><![CDATA[LIPA NA MPESA (BUY GOODS) TILL-9079715]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="126" width="210" height="12" uuid="b45cd10d-63a8-4d3b-9f05-fa182c130af5">
